asset landing beranda

--- a/public/assets_landing/css/style.css
+++ b/public/assets_landing/css/style.css
@@ -23806,7 +23806,7 @@ footer .uk-text-small {
   padding: 30px 34px 58px 34px;
 }
 .in-equity-1 .uk-card-default {
-  background: rgba(255, 255, 255, 0.2);
+  background: white;
 }
 
 .in-equity-2 .in-feature-box a {
